// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bsky views with mutes from mute lists embeds lists in posts 1`] = `
Object {
  "author": Object {
    "associated": Object {
      "activitySubscription": Object {
        "allowSubscriptions": "followers",
      },
    },
    "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "did": "user(0)",
    "displayName": "ali",
    "handle": "alice.test",
    "labels": Array [
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-a",
      },
      Object {
        "cid": "cids(2)",
        "cts": "1970-01-01T00:00:00.000Z",
        "src": "user(0)",
        "uri": "record(1)",
        "val": "self-label-b",
      },
    ],
    "viewer": Object {
      "blockedBy": false,
      "muted": false,
    },
  },
  "bookmarkCount": 0,
  "cid": "cids(0)",
  "embed": Object {
    "$type": "app.bsky.embed.record#view",
    "record": Object {
      "$type": "app.bsky.graph.defs#listView",
      "cid": "cids(4)",
      "creator": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(1)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "description": "new descript",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "listItemCount": 3,
      "name": "updated alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(2)",
      "viewer": Object {
        "muted": false,
      },
    },
  },
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "likeCount": 0,
  "quoteCount": 0,
  "record": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "embed": Object {
      "$type": "app.bsky.embed.record",
      "record": Object {
        "cid": "cids(3)",
        "uri": "record(2)",
      },
    },
    "text": "list embed!",
  },
  "replyCount": 0,
  "repostCount": 0,
  "uri": "record(0)",
  "viewer": Object {
    "bookmarked": false,
    "embeddingDisabled": false,
    "threadMuted": false,
  },
}
`;

exports[`bsky views with mutes from mute lists flags mutes in threads 1`] = `
Object {
  "$type": "app.bsky.feed.defs#threadViewPost",
  "post": Object {
    "author": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "did": "user(0)",
      "displayName": "ali",
      "handle": "alice.test",
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(2)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(0)",
          "uri": "record(2)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "bookmarkCount": 0,
    "cid": "cids(0)",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "likeCount": 3,
    "quoteCount": 0,
    "record": Object {
      "$type": "app.bsky.feed.post",
      "createdAt": "1970-01-01T00:00:00.000000Z",
      "text": "again",
    },
    "replyCount": 2,
    "repostCount": 1,
    "uri": "record(0)",
    "viewer": Object {
      "bookmarked": false,
      "embeddingDisabled": false,
      "like": "record(4)",
      "repost": "record(3)",
      "threadMuted": false,
    },
  },
  "replies": Array [
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "did": "user(2)",
          "handle": "carol.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "followedBy": "record(8)",
            "following": "record(7)",
            "muted": true,
            "mutedByList": Object {
              "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
              "cid": "cids(4)",
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "labels": Array [],
              "listItemCount": 3,
              "name": "alice mutes",
              "purpose": "app.bsky.graph.defs#modlist",
              "uri": "record(6)",
              "viewer": Object {
                "muted": true,
              },
            },
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(3)",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "of course",
        },
        "replyCount": 0,
        "repostCount": 0,
        "uri": "record(5)",
        "viewer": Object {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": Object {},
    },
    Object {
      "$type": "app.bsky.feed.defs#threadViewPost",
      "post": Object {
        "author": Object {
          "associated": Object {
            "activitySubscription": Object {
              "allowSubscriptions": "followers",
            },
          },
          "avatar": "https://bsky.public.url/img/avatar/plain/user(4)/cids(1)@jpeg",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
          "labels": Array [],
          "viewer": Object {
            "blockedBy": false,
            "following": "record(10)",
            "muted": true,
            "mutedByList": Object {
              "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
              "cid": "cids(4)",
              "indexedAt": "1970-01-01T00:00:00.000Z",
              "labels": Array [],
              "listItemCount": 3,
              "name": "alice mutes",
              "purpose": "app.bsky.graph.defs#modlist",
              "uri": "record(6)",
              "viewer": Object {
                "muted": true,
              },
            },
          },
        },
        "bookmarkCount": 0,
        "cid": "cids(5)",
        "embed": Object {
          "$type": "app.bsky.embed.images#view",
          "images": Array [
            Object {
              "alt": "../dev-env/assets/key-landscape-small.jpg",
              "fullsize": "https://bsky.public.url/img/feed_fullsize/plain/user(4)/cids(6)@jpeg",
              "thumb": "https://bsky.public.url/img/feed_thumbnail/plain/user(4)/cids(6)@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(5)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(9)",
            "val": "test-label",
          },
          Object {
            "cid": "cids(5)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "did:example:labeler",
            "uri": "record(9)",
            "val": "test-label-2",
          },
        ],
        "likeCount": 0,
        "quoteCount": 0,
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "../dev-env/assets/key-landscape-small.jpg",
                "image": Object {
                  "$type": "blob",
                  "mimeType": "image/jpeg",
                  "ref": Object {
                    "$link": "cids(6)",
                  },
                  "size": 4114,
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that label_me label_me_2",
        },
        "replyCount": 1,
        "repostCount": 0,
        "uri": "record(9)",
        "viewer": Object {
          "bookmarked": false,
          "embeddingDisabled": false,
          "threadMuted": false,
        },
      },
      "threadContext": Object {},
    },
  ],
  "threadContext": Object {},
}
`;

exports[`bsky views with mutes from mute lists returns a users own list mutes 1`] = `
Object {
  "cursor": "0000000000000__bafycid",
  "lists": Array [
    Object {
      "cid": "cids(0)",
      "creator": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "listItemCount": 0,
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": Object {
        "muted": true,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
      "cid": "cids(3)",
      "creator": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "big list of mutes",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "listItemCount": 3,
      "name": "alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(3)",
      "viewer": Object {
        "muted": true,
      },
    },
  ],
}
`;

exports[`bsky views with mutes from mute lists returns lists associated with a user 1`] = `
Object {
  "cursor": "0000000000000__bafycid",
  "lists": Array [
    Object {
      "cid": "cids(0)",
      "creator": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "blah blah",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "listItemCount": 0,
      "name": "new list",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(0)",
      "viewer": Object {
        "muted": false,
      },
    },
    Object {
      "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
      "cid": "cids(3)",
      "creator": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(1)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "its me!",
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-a",
          },
          Object {
            "cid": "cids(2)",
            "cts": "1970-01-01T00:00:00.000Z",
            "src": "user(0)",
            "uri": "record(2)",
            "val": "self-label-b",
          },
        ],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(1)",
          "muted": false,
        },
      },
      "description": "big list of mutes",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [],
      "listItemCount": 3,
      "name": "alice mutes",
      "purpose": "app.bsky.graph.defs#modlist",
      "uri": "record(3)",
      "viewer": Object {
        "muted": true,
      },
    },
  ],
}
`;

exports[`bsky views with mutes from mute lists returns the contents of a list 1`] = `
Object {
  "cursor": "0000000000000__bafycid",
  "items": Array [
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
          "chat": Object {
            "allowIncoming": "none",
          },
        },
        "did": "user(2)",
        "handle": "dan.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "muted": false,
        },
      },
      "uri": "record(3)",
    },
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "did": "user(3)",
        "handle": "carol.test",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "followedBy": "record(5)",
          "muted": true,
          "mutedByList": Object {
            "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)@jpeg",
            "cid": "cids(0)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "listItemCount": 3,
            "name": "alice mutes",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": Object {
              "muted": true,
            },
          },
        },
      },
      "uri": "record(4)",
    },
    Object {
      "subject": Object {
        "associated": Object {
          "activitySubscription": Object {
            "allowSubscriptions": "followers",
          },
        },
        "avatar": "https://bsky.public.url/img/avatar/plain/user(5)/cids(1)@jpeg",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "description": "hi im bob label_me",
        "did": "user(4)",
        "displayName": "bobby",
        "handle": "bob.test",
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "labels": Array [],
        "viewer": Object {
          "blockedBy": false,
          "following": "record(7)",
          "muted": true,
          "mutedByList": Object {
            "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)@jpeg",
            "cid": "cids(0)",
            "indexedAt": "1970-01-01T00:00:00.000Z",
            "labels": Array [],
            "listItemCount": 3,
            "name": "alice mutes",
            "purpose": "app.bsky.graph.defs#modlist",
            "uri": "record(0)",
            "viewer": Object {
              "muted": true,
            },
          },
        },
      },
      "uri": "record(6)",
    },
  ],
  "list": Object {
    "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)@jpeg",
    "cid": "cids(0)",
    "creator": Object {
      "associated": Object {
        "activitySubscription": Object {
          "allowSubscriptions": "followers",
        },
      },
      "avatar": "https://bsky.public.url/img/avatar/plain/user(0)/cids(1)@jpeg",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "description": "its me!",
      "did": "user(1)",
      "displayName": "ali",
      "handle": "alice.test",
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "labels": Array [
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(2)",
          "val": "self-label-a",
        },
        Object {
          "cid": "cids(2)",
          "cts": "1970-01-01T00:00:00.000Z",
          "src": "user(1)",
          "uri": "record(2)",
          "val": "self-label-b",
        },
      ],
      "viewer": Object {
        "blockedBy": false,
        "followedBy": "record(1)",
        "muted": false,
      },
    },
    "description": "big list of mutes",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "labels": Array [],
    "listItemCount": 3,
    "name": "alice mutes",
    "purpose": "app.bsky.graph.defs#modlist",
    "uri": "record(0)",
    "viewer": Object {
      "muted": true,
    },
  },
}
`;
